--- a/myst.yml
+++ b/myst.yml
@@ -5,10 +5,10 @@ project:
   description: Github Pages based template for hackathons
   # keywords: []
   authors:
-    - name: Instructor Name
-      orcid: XXXX-XXXX-XXXX-XXXX
-      github: username
-  github: https://github.com/hackthackathon/hackathon-template-github
+    - name: Emina A Stojković
+      orcid:  0000-0002-4971-5213
+      github: eastojko
+  github: https://github.com/eastojko/data-science-fun
   # To autogenerate a Table of Contents, run "myst init --write-toc"
   toc:
     - file: README.md
