--- a/environment.yml
+++ b/environment.yml
@@ -3,5 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.11
+  - pandas
+  - scikit-learn
+  - matplotlib
   - mystmd
   - cookiecutter
